--- a/aboutus.html
+++ b/aboutus.html
@@ -175,12 +175,6 @@
                 </a>
             </li>
             <li class="mt-2 pb-3">
-                <a href="/work.html"
-                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
-                    W O R K
-                </a>
-            </li>
-            <li class="mt-2 pb-3">
                 <a href="/aboutus.html"
                     class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block green">
                     A B O U T
@@ -190,6 +184,12 @@
                 <a href="/service.html"
                     class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
                     S E R V I C E S
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/work.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    W O R K
                 </a>
             </li>
             <li class="mt-2 pb-3">
@@ -245,10 +245,10 @@
 
             <!-- "WE GROW IDEAS" Section -->
             <div class="pt-16 md:absolute md:top-[10%] md:left-[5%] md:w-[30%] w-full slide-in section-1-text">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE GROW IDEAS</h2>
+                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 uppercase">Our vision</h2>
                 <p class="text-gray-600 w-full md:w-[74%]">
-                    Our design studio uses intelligent creative thinking to help add value to and grow our clients'
-                    businesses.
+                    To transform every brand story from a blank page into a powerful narrative that resonates, inspires,
+                    and stays with you.
                 </p>
             </div>
 
@@ -275,22 +275,23 @@
 
             <!-- "WE CHAMPION CLIENTS" Section -->
             <div class="pt-16 md:absolute md:top-[4%] md:right-[32%] md:w-[25%] w-full slide-in section-2-text">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 custom-mt-10">WE CHAMPION
-                    CLIENTS.</h2>
+                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 custom-mt-10 uppercase">How we
+                    work .</h2>
                 <p class="text-gray-600 w-full md:w-[75%]">
-                    We are lucky enough to work with gifted, dedicated and committed clients. They offer us insight into
-                    their business; our job is to tell the world.
+                    We prefer clarity over clutter, emotion over noise, and design that does more than decorate.
+                    You are not just a client, you are a creative partner.
+                    Together, we turn stories into visual experiences that connect, move, and endure.
                 </p>
             </div>
 
             <!-- "WE COLLABORATE FEARLESSLY" Section -->
             <div
                 class="mt-8 md:mt-0 md:absolute md:top-[55%] lg:left-[30%] md:w-[20%] w-full slide-in section-2-text-1">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE COLLABORATE FEARLESSLY.
+                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 uppercase">What sets us apart.
                 </h2>
                 <p class="text-gray-600">
-                    Every relationship with every client is a partnership; we work alongside them to make their goals a
-                    reality and help them to grow their businesses.
+                    We don’t just design—we translate emotion.
+                    Where strategy meets soul, that’s where our work lives.
                 </p>
             </div>
 
