--- a/index.html
+++ b/index.html
@@ -262,16 +262,17 @@
             }
         }
 
-         @media (min-width: 768px) and (max-width: 1023.5px) {
+        @media (min-width: 768px) and (max-width: 1023.5px) {
             .testimonial-image {
                 max-height: 60dvh !important;
                 margin-bottom: -10%;
-                
+
             }
 
             .testimonial-image-atlee {
                 max-height: 60dvh !important;
             }
+
             .i-bangle {
                 max-height: 60dvh !important;
             }
@@ -358,12 +359,6 @@
                 </a>
             </li>
             <li class="mt-2 pb-3">
-                <a href="/work.html"
-                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
-                    W O R K
-                </a>
-            </li>
-            <li class="mt-2 pb-3">
                 <a href="/aboutus.html"
                     class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
                     A B O U T
@@ -373,6 +368,12 @@
                 <a href="/service.html"
                     class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
                     S E R V I C E S
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/work.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    W O R K
                 </a>
             </li>
             <li class="mt-2 pb-3">
@@ -401,19 +402,16 @@
 
             <!-- Text Section -->
             <div class="w-full md:w-1/2 text-center md:text-left py-10">
-                <h1 class="lato-font text-3xl text-white sm:text-4xl md:text-4xl leading-tight md:text-left">
-                    WE BELIEVE THAT<br>
-                    INTELLIGENT CREATIVE<br>
-                    THINKING HELPS<br>
-                    ORGANISATIONS AND<br>
-                    INDIVIDUALS TO GROW
+                <h1 class="lato-font text-3xl text-white sm:text-4xl md:text-4xl leading-tight md:text-left uppercase">
+                    We help brands find their <br>
+                    voice through design,<br>
+                    story, and strategy, <br>
+                    built to thrive across <br>
+                    every platform.
                 </h1>
                 <p class="lato-font w-full md:w-[77%] md:text-lg mt-4 text-[#056b29] text-center md:text-left">
-                    Every relationship with every client is a partnership; we work alongside them to make their goals a
-                    reality
-                    and help them to grow their businesses. Whatever the task, no matter whether it's big or small, we
-                    bring our
-                    experience and expertise to that project and strive to deliver the best possible solution.
+                    We are a creative studio where innovative design, thoughtful storytelling, and sharp strategy come
+                    together to reimagine brands and elevate their presence across platforms.
                 </p>
             </div>
         </div>
@@ -528,8 +526,9 @@
                 <div class="w-full lg:w-1/3 text-center lg:text-left">
                     <h2 class="text-pink-400 text-3xl sm:text-4xl font-bold">MOVIE POSTERS</h2>
                     <p class="text-gray-400 mt-3 max-w-md sm:max-w-lg mx-auto lg:mx-0 text-center lg:text-left">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.
+                        A poster is a cracked-open window into a film’s soul.<br />
+                        We design each poster to capture and reflect the essence of its story, inviting viewers in
+                        before the first frame even rolls.
                     </p>
                     <button
                         class="mt-6 bg-pink-500 px-8 py-3 text-white font-semibold hover:bg-pink-600 transition-all shadow-lg"
@@ -590,16 +589,11 @@
                 <h1 class="text-5xl lg:text-6xl font-sf font-medium mb-4">ibangle</h1>
                 <p class="text-gray-400 text-[15px] sm:text-lg leading-relaxed">
                     <br />
-                    The iBangle, designed by Gopi Prasannaa in 2008, was the first-of-its-kind wearable music
-                    device, conceptualized long before Apple introduced wearables.
+                    Long before wearables were a thing, our founder Gopi Prasannaa’s innovative iBangle rewrote the rules of personal audio.
                     <br />
                     <br />
-                    This futuristic bangle-style iPod featured touch-sensitive controls, virtual earphones, and an
-                    adjustable fit,
-                    redefining personal audio experiences. Recognised globally, it was featured in CNN's "21st Century
-                    Visionary" list and highlighted by Yanko Design as one of the Best of 2008, showcasing its
-                    pioneering approach to wearable technology.
-
+                    This first-of-its-kind, bangle-style iPod, with touch-sensitive controls, virtual earphones, and an adjustable fit, redefined the personal audio experience. 
+                    It caught global attention, landing on CNN’s 21st Century Visionary list and Yanko Design’s Best of 2008. A real game-changer in wearable tech.
                 </p>
                 <button onclick="openPopupForiBangle()"
                     class="bg-black mt-8 sm:mt-10 border border-white px-12 sm:px-10 py-2 sm:py-3 text-sm sm:text-lg text-white font-medium tracking-wider sm:tracking-wide"
