--- a/service.html
+++ b/service.html
@@ -104,12 +104,6 @@
 				</a>
 			</li>
 			<li class="mt-2 pb-3">
-				<a href="/work.html"
-					class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
-					W O R K
-				</a>
-			</li>
-			<li class="mt-2 pb-3">
 				<a href="/aboutus.html"
 					class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
 					A B O U T
@@ -119,6 +113,12 @@
 				<a href="/service.html"
 					class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block green">
 					S E R V I C E S
+				</a>
+			</li>
+			<li class="mt-2 pb-3">
+				<a href="/work.html"
+					class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+					W O R K
 				</a>
 			</li>
 			<li class="mt-2 pb-3">
@@ -160,9 +160,11 @@
 		<div
 			class="col-span-4 row-span-2 bg-green-500 px-4 md:px-6 lg:px-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">BRANDING</h1>
-				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
-					LOGO DESIGN, BRAND POSITIONING, BRAND STRATEGY, NAMING & TAGLINE DEVELOPMENT, REBRANDING
+				<h1
+					class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase italic">
+					WE BUILD BRANDS</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text uppercase">
+					LOGO DESIGN, BRAND POSITIONING, BRAND STRATEGY, NAMING & TAGLINE DEVELOPMENT, REBRANDING.
 				</p>
 				<button
 					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
@@ -188,8 +190,10 @@
 		<div id="ads-section-right"
 			class="col-span-4 row-span-2 col-start-4 row-start-3 bg-white p-4 md:p-6 lg:p-8 text-blue-700 flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">ADVERTISING</h1>
-				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
+				<h1
+					class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase italic">
+					WE CREATE CAMPAIGNS</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text uppercase">
 					PRINT, DIGITAL, FILM, PHOTOGRAPHY AND ART DIRECTION, OUT-OF-HOME ADVERTISING.
 				</p>
 				<button
@@ -206,10 +210,11 @@
 		<div
 			class="col-span-4 row-span-2 row-start-5 bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">DESIGNING</h1>
-				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
-					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT,
-					MOTION GRAPHICS & ANIMATION
+				<h1
+					class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase italic">
+					WE CRAFT VISUALS.</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text uppercase">
+					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT, MOTION GRAPHICS & ANIMATION
 				</p>
 				<button
 					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
@@ -235,10 +240,11 @@
 		<div
 			class="col-span-4 row-span-2 col-start-4 row-start-7 bg-black p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold pb-2 animate-text">FILM PRODUCTION</h1>
-				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
-					TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE, 2D ANIMATION & 3D ANIMATION
-				</p>
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold pb-2 animate-text uppercase italic">WE
+					TELL STORIES.
+				</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text uppercase">
+					TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE, 2D & 3D ANIMATION </p>
 				<button
 					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
 					onclick="openServiceModal('film-production-popup')">
@@ -253,10 +259,12 @@
 		<div
 			class="col-span-4 row-span-2 row-start-9 bg-blue-700 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">UI / UX</h1>
-				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
-					UI DESIGN, INTERACTION DESIGN, PROTOTYPING AND WIREFRAMING, UX DESIGN
-				</p>
+				<h1
+					class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase italic">
+					WE DESIGN EXPERIENCES.
+				</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text uppercase">
+					UI DESIGN, INTERACTION DESIGN, PROTOTYPING AND WIREFRAMING, UX DESIGN </p>
 				<button
 					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
 					onclick="openServiceModal('ui-ux-popup')">
@@ -281,10 +289,11 @@
 		<div
 			class="col-span-4 row-span-2 col-start-4 row-start-11  bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold pb-2 animate-text">Digital Marketing</h1>
-				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
-				
-						SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold pb-2 animate-text uppercase italic">WE
+					DRIVE ENGAGEMENT.
+				</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text uppercase">
+					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
 					MARKETING
 				</p>
 				<button
@@ -299,22 +308,22 @@
 
 
 		<!-- Content 13 -->
-<div
-	class="col-span-4 row-span-2 row-start-13 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
-	<div class="text-left custom-width text-blue-700">
-		<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-snug pb-2 animate-text uppercase">
-			INTEGRATED MARKETING
-		</h1>
-		<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-relaxed animate-text">
-			360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
-			PARTNERSHIPS
-		</p>
-		<button
-			class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-xs sm:text-sm md:text-base">
-			Explore
-		</button>
-	</div>
-</div>
+		<div
+			class="col-span-4 row-span-2 row-start-13 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
+			<div class="text-left custom-width text-blue-700">
+				<h1
+					class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-snug pb-2 animate-text uppercase italic">
+					WE CONNECT IT ALL.
+				</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-relaxed animate-text uppercase">
+					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
+					PARTNERSHIPS </p>
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-xs sm:text-sm md:text-base">
+					Explore
+				</button>
+			</div>
+		</div>
 
 
 		<!-- Image 12 -->
@@ -359,22 +368,22 @@
 								<li class="cursor-pointer">
 									<a class="hover:text-yellow-400" href="/work.html?tab=flim">Film Posters</a>
 								</li>
-								 <li class="cursor-pointer">
-                                    <a class="hover:text-yellow-400" href="/work.html?tab=branding">Branding</a>
-                                </li>
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-yellow-400" href="/work.html?tab=title">Title Animations</a>
-                                </li>
+								<li class="cursor-pointer">
+									<a class="hover:text-yellow-400" href="/work.html?tab=branding">Branding</a>
+								</li>
+								<li class="cursor-pointer">
+									<a class="hover:text-yellow-400" href="/work.html?tab=title">Title Animations</a>
+								</li>
 
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-yellow-400" href="work.html?tab=advertising">Advertising</a>
-                                </li>
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-yellow-400" href="/work.html?tab=products">Products</a>
-                                </li>
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-yellow-400" href="/work.html?tab=events">Events</a>
-                                </li>
+								<li class="cursor-pointer">
+									<a class="hover:text-yellow-400" href="work.html?tab=advertising">Advertising</a>
+								</li>
+								<li class="cursor-pointer">
+									<a class="hover:text-yellow-400" href="/work.html?tab=products">Products</a>
+								</li>
+								<li class="cursor-pointer">
+									<a class="hover:text-yellow-400" href="/work.html?tab=events">Events</a>
+								</li>
 
 							</ul>
 						</div>
@@ -488,18 +497,7 @@
 					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
 						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">logo design</h2>
 						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries,
-							but also the leap into electronic typesetting, remaining essentially unchanged. It was
-							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-							passages,
-							and more recently with desktop publishing software like Aldus PageMaker including versions
-							of
-							Lorem Ipsum.
+							We create distinctive logos <br /> that capture your brand’s essence at a glance.
 						</p>
 					</div>
 				</div>
@@ -512,18 +510,7 @@
 					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
 						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">brand strategy</h2>
 						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries,
-							but also the leap into electronic typesetting, remaining essentially unchanged. It was
-							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-							passages,
-							and more recently with desktop publishing software like Aldus PageMaker including versions
-							of
-							Lorem Ipsum.
+							We define where your brand <br /> stands—and why it matters.
 						</p>
 					</div>
 				</div>
@@ -536,18 +523,7 @@
 					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
 						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">brand positioning</h2>
 						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries,
-							but also the leap into electronic typesetting, remaining essentially unchanged. It was
-							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-							passages,
-							and more recently with desktop publishing software like Aldus PageMaker including versions
-							of
-							Lorem Ipsum.
+							We define where your brand <br />stands—and why it matters.
 						</p>
 					</div>
 				</div>
@@ -560,18 +536,7 @@
 					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
 						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">naming & tagline</h2>
 						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries,
-							but also the leap into electronic typesetting, remaining essentially unchanged. It was
-							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-							passages,
-							and more recently with desktop publishing software like Aldus PageMaker including versions
-							of
-							Lorem Ipsum.
+							We craft names and taglines <br/> that are memorable, meaningful, and authentic.
 						</p>
 					</div>
 				</div>
@@ -584,18 +549,7 @@
 					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
 						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">rebranding</h2>
 						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries,
-							but also the leap into electronic typesetting, remaining essentially unchanged. It was
-							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-							passages,
-							and more recently with desktop publishing software like Aldus PageMaker including versions
-							of
-							Lorem Ipsum.
+							We reimagine your brand to reflect <br/> who you are now—and where you're headed.
 						</p>
 					</div>
 				</div>
@@ -824,7 +778,7 @@
 							Lorem Ipsum.
 						</p>
 					</div>
-				</div>  
+				</div>
 				<div class="flex flex-col md:flex-row w-full mt-10 mb-10">
 					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
 						<img src="/services-assets/pop-assets/animation.png" alt="service asset"
