--- a/team.html
+++ b/team.html
@@ -65,12 +65,6 @@
                 </a>
             </li>
             <li class="mt-2 pb-3">
-                <a href="/work.html"
-                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
-                    W O R K
-                </a>
-            </li>
-            <li class="mt-2 pb-3">
                 <a href="/aboutus.html"
                     class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
                     A B O U T
@@ -80,6 +74,12 @@
                 <a href="/service.html"
                     class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
                     S E R V I C E S
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/work.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    W O R K
                 </a>
             </li>
             <li class="mt-2 pb-3">
@@ -128,8 +128,8 @@
             <!-- Person 1 -->
             <div class="w-full pt-10 flex gap-2 justify-start">
                 <div class="text-right flex flex-col justify-center">
-                    <h2 class="text-sm sm:text-xl font-bold text-[#595959]">GOPI PRASANNAA</h2>
-                    <p class="text-xs text-sm sm:text-lg text-[#a8a8a8]">CEO / FOUNDER</p>
+                    <h2 class="text-sm sm:text-xl font-bold text-[#595959]">GOPI PRASANNAA </h2>
+                    <p class="text-xs text-sm sm:text-lg text-[#a8a8a8]">FOUNDER/CEO</p>
                 </div>
                 <div class="relative">
                     <img src="/png-team/specs-dude.png" alt="Person 1" class="relative w-40 sm:w-52 z-10">
