--- a/contactus.html
+++ b/contactus.html
@@ -186,7 +186,7 @@
             <div class="w-full md:w-1/2 px-4 lg:px-6 pt-10 pb-10 flex flex-col justify-center relative">
                 <div class="flex items-center justify-between">
                     <h1 class="contact-title-text font-light text-[#272cf7]">
-                        L E T S <br> T A L K
+                        L E T 'S <br> T A L K
                     </h1>
 
                     <img src="/contactpage_assets/stamp.png" alt="Logo"
@@ -234,7 +234,7 @@
         <div class="container">
             <div class="w-full max-w-4xl mx-auto mt-6">
                 <!-- Heading + Input Field -->
-                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left">LETS BE CREATIVE. LETS BEGIN.</h1>
+                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left uppercase">Ready when you are. Let’s create.</h1>
                 <div class="flex">
                     <input type="email" id="footerMail" placeholder="ENTER YOUR EMAIL ADDRESS"
                         class="p-4 w-full text-lg text-gray-600 outline-none bg-white" />
