--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
         <div class="container">
             <div class="w-full max-w-4xl mx-auto mt-6">
                 <!-- Heading + Input Field -->
-                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left">LETS BE CREATIVE. LETS BEGIN.</h1>
+                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left uppercase">Ready when you are. Let’s create.</h1>
                 <div class="flex">
                     <input type="email" placeholder="ENTER YOUR EMAIL ADDRESS"
                         class="p-4 w-full text-lg text-gray-600 outline-none bg-white" />
