work page banner text change

--- a/work.html
+++ b/work.html
@@ -152,14 +152,14 @@
 
         .banner-text {
             text-align: right;
-            font-size: 28px;
-            line-height: 1.75rem;
+            font-size: 32px;
+            line-height: 2rem;
             font-weight: 500;
         }
 
         @media (max-height: 600px) {
             .bg-horse {
-                min-height: 550px;
+                min-height: 500px;
             }
 
             .absolute.text-white.right-5.bottom-\[30vh\].mt-\[80px\] {
@@ -245,10 +245,11 @@
     <section class="relative w-full flex items-end justify-end bg-black bg-horse h-screen">
         <!-- Overlay with dark blue -->
 
-        <div class="absolute text-white right-5 bottom-[30vh] mt-[80px]">
-            <h1 class=" banner-text uppercase">
-                We belive that <br /> INTELLIGENT creative<br /> THINKING helps<br /> ORGANISATIONS and
-                <br />INDIVIDUALS to grow
+        <div class="absolute text-white right-5 bottom-[33vh] mt-[80px]">
+            <h1 class="banner-text uppercase">
+                We will allow<br /> our work speak<br /> for itself
+                <!-- We belive that <br /> INTELLIGENT creative<br /> THINKING helps<br /> ORGANISATIONS and
+                <br />INDIVIDUALS to grow -->
             </h1>
         </div>
     </section>
@@ -601,7 +602,8 @@
         <div class="container">
             <div class="w-full max-w-4xl mx-auto mt-6">
                 <!-- Heading + Input Field -->
-                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left uppercase">Ready when you are. Let’s create.</h1>
+                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left uppercase">Ready when you are. Let’s create.
+                </h1>
                 <div class="flex">
                     <input type="email" placeholder="ENTER YOUR EMAIL ADDRESS"
                         class="p-4 w-full text-lg text-gray-600 outline-none bg-white" />
