content and few fix: maharajan

--- a/index.html
+++ b/index.html
@@ -403,15 +403,13 @@
             <!-- Text Section -->
             <div class="w-full md:w-1/2 text-center md:text-left py-10">
                 <h1 class="lato-font text-3xl text-white sm:text-4xl md:text-4xl leading-tight md:text-left uppercase">
-                    We help brands find their <br>
-                    voice through design,<br>
-                    story, and strategy, <br>
-                    built to thrive across <br>
-                    every platform.
+                    From blank slates to bold statements
                 </h1>
                 <p class="lato-font w-full md:w-[77%] md:text-lg mt-4 text-[#056b29] text-center md:text-left">
-                    We are a creative studio where innovative design, thoughtful storytelling, and sharp strategy come
-                    together to reimagine brands and elevate their presence across platforms.
+                    We help brands find their voice. We are a creative studio where innovative design, thoughtful
+                    storytelling, and sharp
+                    strategy come together to reimagine brands and
+                    elevate their presence across platforms
                 </p>
             </div>
         </div>
@@ -526,15 +524,16 @@
                 <div class="w-full lg:w-1/3 text-center lg:text-left">
                     <h2 class="text-pink-400 text-3xl sm:text-4xl font-bold">MOVIE POSTERS</h2>
                     <p class="text-gray-400 mt-3 max-w-md sm:max-w-lg mx-auto lg:mx-0 text-center lg:text-left">
-                        A poster is a cracked-open window into a film’s soul.<br />
+                        A poster is a cracked-open window into a film’s soul.
                         We design each poster to capture and reflect the essence of its story, inviting viewers in
                         before the first frame even rolls.
                     </p>
                     <button
-                        class="mt-6 bg-pink-500 px-8 py-3 text-white font-semibold hover:bg-pink-600 transition-all shadow-lg"
+                        class="uppercase mt-6 bg-pink-500 px-6 py-3 text-white font-semibold hover:bg-pink-600 transition-all shadow-lg"
                         onclick="window.location.href='/work.html'">
-                        CLICK FOR MORE
+                        Explore
                     </button>
+
                 </div>
 
                 <!-- Image Section (Grid for responsiveness) -->
@@ -586,14 +585,19 @@
 
             <!-- Text Content (Left) -->
             <div class="w-full lg:w-1/2 text-left">
-                <h1 class="text-5xl lg:text-6xl font-sf font-medium mb-4">ibangle</h1>
+                <h1 class="text-5xl lg:text-6xl font-sf font-medium mb-4">Product Design</h1>
+                <p class="text-gray-400 text-[14px] sm:text-lg mb-[10vh]">We create smart, functional product designs, from concept to final prototype.</p>
+                <h1 class="text-2xl lg:text-4xl font-sf font-medium mb-1 mt-2">ibangle</h1>
                 <p class="text-gray-400 text-[15px] sm:text-lg leading-relaxed">
                     <br />
-                    Long before wearables were a thing, our founder Gopi Prasannaa’s innovative iBangle rewrote the rules of personal audio.
+                    Long before wearables were a thing, our founder Gopi Prasannaa’s innovative iBangle rewrote the
+                    rules of personal audio.
                     <br />
                     <br />
-                    This first-of-its-kind, bangle-style iPod, with touch-sensitive controls, virtual earphones, and an adjustable fit, redefined the personal audio experience. 
-                    It caught global attention, landing on CNN’s 21st Century Visionary list and Yanko Design’s Best of 2008. A real game-changer in wearable tech.
+                    This first-of-its-kind, bangle-style iPod, with touch-sensitive controls, virtual earphones, and an
+                    adjustable fit, redefined the personal audio experience.
+                    It caught global attention, landing on CNN’s 21st Century Visionary list and Yanko Design’s Best of
+                    2008. A real game-changer in wearable tech.
                 </p>
                 <button onclick="openPopupForiBangle()"
                     class="bg-black mt-8 sm:mt-10 border border-white px-12 sm:px-10 py-2 sm:py-3 text-sm sm:text-lg text-white font-medium tracking-wider sm:tracking-wide"
@@ -606,7 +610,7 @@
             <div
                 class="w-full lg:w-[50%] sm:h-auto flex justify-center lg:justify-end mt-8 lg:mt-0 lg:absolute lg:bottom-0 lg:right-0">
                 <img src="/MIW_Website_Assets/ibangle-asset.png" alt="iBangle Image"
-                    class="w-[80%] lg:w-full max-w-md lg:max-w-lg object-contain sm:object-cover sm:h-[40rem] md:h-[55rem] i-bangle">
+                    class="w-[80%] lg:w-full max-w-md lg:max-w-lg object-contain sm:object-cover sm:h-[40rem] md:h-[55rem] lg:h-[40rem] i-bangle">
             </div>
 
         </div>
@@ -861,7 +865,8 @@
         <div class="container">
             <div class="w-full max-w-4xl mx-auto mt-6">
                 <!-- Heading + Input Field -->
-                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left uppercase">Ready when you are. Let’s create.</h1>
+                <h1 class="text-xl md:text-3xl font-bold mb-4 text-left uppercase">Ready when you are. Let’s create.
+                </h1>
                 <div class="flex">
                     <input type="email" placeholder="ENTER YOUR EMAIL ADDRESS"
                         class="p-4 w-full text-lg text-gray-600 outline-none bg-white" />
