--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Lato', sans-serif;
@@ -218,12 +219,14 @@
 
         <!-- Text Section -->
         <div class="absolute bottom-10 right-10 text-white text-right max-w-xs md:max-w-md lg:max-w-lg">
-            <p class="text-lg md:text-xl lg:text-2xl font-semibold leading-tight">
-                WE BELIEVE THAT <br>
-                INTELLIGENT CREATIVE <br>
-                THINKING HELPS <br>
-                ORGANISATIONS AND <br>
-                INDIVIDUALS TO GROW
+            <p class="text-lg md:text-xl lg:text-2xl font-semibold leading-tight uppercase">
+                Born out of a love<br>
+                for design and<br> 
+                storytelling, we started <br>
+                this studio in 1999 <br>
+                to help ideas find their <br>
+                most striking form.<br>
+            </p>
             </p>
         </div>
     </section>
