--- a/work.html
+++ b/work.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
     <style>
         html {
             scroll-behavior: smooth;
@@ -293,7 +294,7 @@
 
 
     <section class="px-4 py-0 sm:px-32 sm:py-4 tab-section block bg-white mb-8" id="flim">
-        <div class="grid gap-1 grid-cols-2 sm:grid-cols-2 lg:grid-cols-3" data-scroll-section>
+        <div class="grid gap-3 grid-cols-2 sm:grid-cols-2 lg:grid-cols-4" data-scroll-section>
             <!-- Gallery Images with Overlay -->
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/96-poster30x40-01.jpg')">
                 <img src="/our_works/movie-posters/96-poster30x40-01.jpg" alt="Front Image"
@@ -336,7 +337,18 @@
                 <img src="/our_works/movie-posters/IruthiSutru_7.jpg" alt="Iruthi Sutru"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
-
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/threean-30x40.jpg')">
+                <img src="/our_works/movie-posters/threean-30x40.jpg" alt="threean"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/ThugLife-poster-01.jpg')">
+                <img src="/our_works/movie-posters/ThugLife-poster-01.jpg" alt="ThugLife"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/vikram 9.jpg')">
+                <img src="/our_works/movie-posters/vikram 9.jpg" alt="vikram"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
         </div>
 
     </section>
