--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
 
             <!-- Text Content (Left) -->
             <div class="w-full lg:w-1/2 text-left">
-                <h1 class="text-5xl lg:text-6xl font-sf font-medium mb-4">Product Design</h1>
-                <p class="text-gray-400 text-[14px] sm:text-lg mb-[10vh]">We create smart, functional product designs, from concept to final prototype.</p>
+                <h1 class="text-4xl lg:text-6xl font-sf font-medium mb-4">Product Design</h1>
+                <p class="text-gray-400 text-[14px] sm:text-lg mb-[2vh] sm:mb-[10vh]">We create smart, functional product designs, from concept to final prototype.</p>
                 <h1 class="text-2xl lg:text-4xl font-sf font-medium mb-1 mt-2">ibangle</h1>
                 <p class="text-gray-400 text-[15px] sm:text-lg leading-relaxed">
                     <br />
