work page frame size

--- a/work.html
+++ b/work.html
@@ -293,7 +293,7 @@
     </div>
 
 
-    <section class="px-4 py-0 sm:px-32 sm:py-4 tab-section block bg-white mb-8" id="flim">
+    <section class="px-4 py-0 sm:px-[32vh] sm:py-4 tab-section block bg-white mb-8" id="flim">
         <div class="grid gap-3 grid-cols-2 sm:grid-cols-2 lg:grid-cols-4" data-scroll-section>
             <!-- Gallery Images with Overlay -->
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/96-poster30x40-01.jpg')">
